--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -1,4 +1,4 @@
-name: Execute command
+name: p2p-command
 
 on:
   workflow_call:
@@ -21,10 +21,10 @@ on:
         default: false
 env:
   REGISTRY: europe-west2-docker.pkg.dev/${{ inputs.project-id }}/tenant
-  
+
 jobs:
-  run-command:
-    name: command-${{ inputs.command }}
+  p2p:
+    name: ${{ inputs.command }}
     runs-on: ubuntu-latest
 
 
