--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,17 @@ on:
       - initial-p2p
 
 jobs:
+  # increment-version:
+  #   name: increment-version-dry-run
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v3
+      
+  #   - name: Increment version
+  #     uses: ./.github/actions/bump-version
+  #     with: 
+  #       git_token: ${{secrets.GITHUB_TOKEN}}
+  #       dry-run: true
   p2p:
     uses: ./.github/workflows/p2p.yaml
     with:
