--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Authenticate to Google Cloud
         id: auth
-        if: inputs.dry-run == 'true'
+        if: inputs.dry-run == false
         uses: google-github-actions/auth@v1
         with:
           workload_identity_provider: ${{ inputs.workload-identity-provider }}
@@ -48,14 +48,14 @@ jobs:
 
       - name: Setup kubeconfig
         id: setup-kubeconfig
-        if: inputs.dry-run == 'true'
+        if: inputs.dry-run == false
         uses: ./.github/actions/kubeconfig
         with:
           project_id: ${{ inputs.project-id }}
       
       - name: Login to Artifact Registry
         uses: docker/login-action@v2
-        if: inputs.dry-run == 'true'
+        if: inputs.dry-run == false
         with:
           registry: europe-west2-docker.pkg.dev
           username: oauth2accesstoken
