--- a/.github/actions/bump-version/action.yaml
+++ b/.github/actions/bump-version/action.yaml
@@ -28,6 +28,11 @@ runs:
       env:
         GITHUB_TOKEN: "${{ inputs.git-token }}"
 
+     - name: get previous version from tag
+      id: previousversion
+      shell: bash
+      run: |
+        echo "version=$(echo ${{ steps.previoustag.outputs.tag }} | cut -d'v' -f 2)" >> "$GITHUB_OUTPUT"
 
     - name: Get next minor version
       id: semvers
