--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-      
+
     - name: Increment version
       uses: ./.github/actions/bump-version
       with: 
-        git_token: ${{secrets.GITHUB_TOKEN}}
+        git-token: ${{secrets.GITHUB_TOKEN}}
