--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -19,6 +19,14 @@ on:
         required: false
         type: boolean
         default: false
+      zone:
+        required: false
+        type: string
+        default: europe-west2
+      region:
+        required: false
+        type: string
+        default: europe-west2-a
 env:
   REGISTRY: europe-west2-docker.pkg.dev/${{ inputs.project-id }}/tenant
 
@@ -26,7 +34,6 @@ jobs:
   p2p:
     name: ${{ inputs.command }}
     runs-on: ubuntu-latest
-
 
     permissions:
       contents: read
@@ -46,12 +53,36 @@ jobs:
           token_format: access_token
           access_token_lifetime: 600s
 
+      - name: Setup Google Cloud SDK
+        id: setup-gcloud
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          install_components: beta,gke-gcloud-auth-plugin
+
+      - name: Setup NumPy
+        id: setup-numpy
+        shell: bash
+        # https://cloud.google.com/iap/docs/using-tcp-forwarding#increasing_the_tcp_upload_bandwidth
+        run: $(gcloud info --format="value(basic.python_location)") -m pip install numpy
+
+      - name: Setup IAP tunnel
+        id: setup-iap-tunnel
+        shell: bash
+        run: |
+          nohup sh -c "while true ; do gcloud compute start-iap-tunnel sandbox-gcp-bastion 3128 --local-host-port localhost:57755 --project ${{ inputs.project_id }}  --zone ${{ inputs.region }}  ; done" &
+          sleep 4
+
       - name: Setup kubeconfig
         id: setup-kubeconfig
-        if: inputs.dry-run == false
-        uses: ./.github/actions/kubeconfig
-        with:
-          project_id: ${{ inputs.project-id }}
+        shell: bash
+        run: |
+          gcloud container clusters get-credentials --project ${{ inputs.project_id }} --zone ${{ inputs.zone }} --internal-ip sandbox-gcp
+          kubectl config set clusters.gke_${{ inputs.project_id }}_${{ inputs.zone }}_sandbox-gcp.proxy-url http://localhost:57755
+    
+      - name: Test kubectl
+        id: test-kubectl
+        shell: bash
+        run: kubectl cluster-info
       
       - name: Login to Artifact Registry
         uses: docker/login-action@v2
