--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -55,18 +55,21 @@ jobs:
 
       - name: Setup Google Cloud SDK
         id: setup-gcloud
+        if: inputs.dry-run == false
         uses: google-github-actions/setup-gcloud@v1
         with:
           install_components: beta,gke-gcloud-auth-plugin
 
       - name: Setup NumPy
         id: setup-numpy
+        if: inputs.dry-run == false
         shell: bash
         # https://cloud.google.com/iap/docs/using-tcp-forwarding#increasing_the_tcp_upload_bandwidth
         run: $(gcloud info --format="value(basic.python_location)") -m pip install numpy
 
       - name: Setup IAP tunnel
         id: setup-iap-tunnel
+        if: inputs.dry-run == false
         shell: bash
         run: |
           nohup sh -c "while true ; do gcloud compute start-iap-tunnel sandbox-gcp-bastion 3128 --local-host-port localhost:57755 --project ${{ inputs.project_id }}  --zone ${{ inputs.region }}  ; done" &
@@ -74,6 +77,7 @@ jobs:
 
       - name: Setup kubeconfig
         id: setup-kubeconfig
+        if: inputs.dry-run == false
         shell: bash
         run: |
           gcloud container clusters get-credentials --project ${{ inputs.project_id }} --zone ${{ inputs.zone }} --internal-ip sandbox-gcp
@@ -81,6 +85,7 @@ jobs:
     
       - name: Test kubectl
         id: test-kubectl
+        if: inputs.dry-run == false
         shell: bash
         run: kubectl cluster-info
       
