--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -72,7 +72,7 @@ jobs:
         if: inputs.dry-run == false
         shell: bash
         run: |
-          nohup sh -c "while true ; do gcloud compute start-iap-tunnel sandbox-gcp-bastion 3128 --local-host-port localhost:57755 --project ${{ inputs.project_id }}  --zone ${{ inputs.region }}  ; done" &
+          nohup sh -c "while true ; do gcloud compute start-iap-tunnel sandbox-gcp-bastion 3128 --local-host-port localhost:57755 --project ${{ inputs.project-id }}  --zone ${{ inputs.region }}  ; done" &
           sleep 4
 
       - name: Setup kubeconfig
@@ -80,8 +80,8 @@ jobs:
         if: inputs.dry-run == false
         shell: bash
         run: |
-          gcloud container clusters get-credentials --project ${{ inputs.project_id }} --zone ${{ inputs.zone }} --internal-ip sandbox-gcp
-          kubectl config set clusters.gke_${{ inputs.project_id }}_${{ inputs.zone }}_sandbox-gcp.proxy-url http://localhost:57755
+          gcloud container clusters get-credentials --project ${{ inputs.project-id }} --zone ${{ inputs.zone }} --internal-ip sandbox-gcp
+          kubectl config set clusters.gke_${{ inputs.project-id }}_${{ inputs.zone }}_sandbox-gcp.proxy-url http://localhost:57755
     
       - name: Test kubectl
         id: test-kubectl
