--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
     with: 
       dry-run: true
   p2p:
-    uses: ./.github/workflows/p2p.yaml
+    uses: ./.github/workflows/idp-p2p.yaml
     with:
       project-id: PROJECT-ID
       project-number: PROJECT-NUMBER
