--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -19,16 +19,16 @@ on:
         required: false
         type: boolean
         default: false
-      zone:
+      region:
         required: false
         type: string
         default: europe-west2
-      region:
+      zone:
         required: false
         type: string
         default: europe-west2-a
 env:
-  REGISTRY: europe-west2-docker.pkg.dev/${{ inputs.project-id }}/tenant
+  REGISTRY: ${{ inputs.region }}-docker.pkg.dev/${{ inputs.project-id }}/tenant
 
 jobs:
   p2p:
@@ -72,7 +72,7 @@ jobs:
         if: inputs.dry-run == false
         shell: bash
         run: |
-          nohup sh -c "while true ; do gcloud compute start-iap-tunnel sandbox-gcp-bastion 3128 --local-host-port localhost:57755 --project ${{ inputs.project-id }}  --zone ${{ inputs.region }}  ; done" &
+          nohup sh -c "while true ; do gcloud compute start-iap-tunnel sandbox-gcp-bastion 3128 --local-host-port localhost:57755 --project ${{ inputs.project-id }}  --zone ${{ inputs.zone }}  ; done" &
           sleep 4
 
       - name: Setup kubeconfig
@@ -80,7 +80,7 @@ jobs:
         if: inputs.dry-run == false
         shell: bash
         run: |
-          gcloud container clusters get-credentials --project ${{ inputs.project-id }} --zone ${{ inputs.zone }} --internal-ip sandbox-gcp
+          gcloud container clusters get-credentials --project ${{ inputs.project-id }} --zone ${{ inputs.region }} --internal-ip sandbox-gcp
           kubectl config set clusters.gke_${{ inputs.project-id }}_${{ inputs.zone }}_sandbox-gcp.proxy-url http://localhost:57755
     
       - name: Test kubectl
