--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -81,7 +81,7 @@ jobs:
         shell: bash
         run: |
           gcloud container clusters get-credentials --project ${{ inputs.project-id }} --zone ${{ inputs.region }} --internal-ip sandbox-gcp
-          kubectl config set clusters.gke_${{ inputs.project-id }}_${{ inputs.zone }}_sandbox-gcp.proxy-url http://localhost:57755
+          kubectl config set clusters.gke_${{ inputs.project-id }}_${{ inputs.region }}_sandbox-gcp.proxy-url http://localhost:57755
     
       - name: Test kubectl
         id: test-kubectl
