Fix permission on job to create tasks

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,6 +7,10 @@ on:
 
 concurrency: cd-main
 
+permissions:
+  contents: read
+  id-token: write
+  
 jobs:
   increment-version:
     uses: ./.github/workflows/increment-version.yaml
