--- a/.github/workflows/increment-version.yaml
+++ b/.github/workflows/increment-version.yaml
@@ -22,6 +22,10 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0  
+    - name: Configure Git
+      run: |
+        git config user.name "$GITHUB_ACTOR"
+        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"    
         
     - name: Get Previous tag
       id: previoustag
