--- a/.github/workflows/increment-version.yaml
+++ b/.github/workflows/increment-version.yaml
@@ -3,6 +3,10 @@ name: increment-version
 
 on:
   workflow_call:
+    secrets:
+      git-token:
+        required: true
+        type: string
     inputs:
       dry-run:
         type: boolean
@@ -24,6 +28,8 @@ jobs:
         fetch-depth: 0  
     - name: Configure Git
       run: |
+        echo Input ${{ inputs.git-token }}
+        echo Secret ${{ secrets.GITHUB_TOKEN  }}
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"    
         
