--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,10 @@ on:
       - main
       - initial-p2p
 
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
   increment-version:
     uses: ./.github/workflows/increment-version.yaml   
