--- a/.github/workflows/increment-version.yaml
+++ b/.github/workflows/increment-version.yaml
@@ -56,7 +56,7 @@ jobs:
       if: inputs.dry-run == false
       id: create_tag
       with:
-        tag: test${{ steps.semvers.outputs.minor }}
+        tag: v${{ steps.semvers.outputs.minor }}
         tag_exists_error: true
 
     - name: Set bumped version in ourput
