--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -10,6 +10,13 @@ concurrency: cd-main
 
   
 jobs:
+  p2p:
+    uses: ./.github/workflows/idp-p2p.yaml
+    with:
+      project-id: PROJECT-ID
+      project-number: PROJECT-NUMBER
+      tenant-name: TEST-TENANT
+      dry-run: true
   increment-version:
     uses: ./.github/workflows/increment-version.yaml
     secrets:
