--- a/.github/workflows/increment-version.yaml
+++ b/.github/workflows/increment-version.yaml
@@ -55,6 +55,13 @@ jobs:
         tag: v${{ steps.semvers.outputs.minor }}
         tag_exists_error: true
 
+    - name: Create branch # Workaround as gitactions is having issues running from tags
+      uses: peterjgrainger/action-create-branch@v2.2.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.git-token }}
+      with:
+        branch: release-${{ steps.semvers.outputs.minor }}
+
     - name: Set bumped version in ourput
       id: setversion
       shell: bash
