Test tag version

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,3 +21,5 @@ jobs:
     uses: ./.github/workflows/increment-version.yaml
     secrets:
       git-token: ${{ secrets.GITHUB_TOKEN }}
+    with:
+      downstream-version: ${{ github.ref_name }}
