--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -43,6 +43,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Check tag
+        id: check-tag
+        shell: bash
+        run: git describe --tags --abbrev=0
+
       - name: Authenticate to Google Cloud
         id: auth
         if: inputs.dry-run == false
@@ -88,7 +93,7 @@ jobs:
         if: inputs.dry-run == false
         shell: bash
         run: kubectl cluster-info
-      
+
       - name: Login to Artifact Registry
         uses: docker/login-action@v2
         if: inputs.dry-run == false
