--- a/.github/workflows/idp-p2p.yaml
+++ b/.github/workflows/idp-p2p.yaml
@@ -12,6 +12,9 @@ on:
       tenant-name:
         required: true
         type: string
+      downstream-version:
+        required: true
+        type: string
       dry-run:
         required: false
         type: boolean
@@ -37,7 +40,7 @@ jobs:
           echo "service_account=$SERVICE_ACCOUNT" >> $GITHUB_OUTPUT
   build:
     needs: [setup]
-    uses: ./.github/workflows/execute-command.yaml
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ input.downstream-version }}
     with:
       command: p2p-build
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
@@ -47,7 +50,7 @@ jobs:
 
   functional-test:
     needs: [build, setup]
-    uses: ./.github/workflows/execute-command.yaml
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ input.downstream-version }}
     with:
       command: p2p-functional
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
@@ -58,7 +61,7 @@ jobs:
   nft-test:
     name: nft-test
     needs: [functional-test, setup]
-    uses: ./.github/workflows/execute-command.yaml
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ input.downstream-version }}
     with:
       command: p2p-nft
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
@@ -70,7 +73,7 @@ jobs:
     name: dev-deploy
     if: github.ref == 'refs/heads/main'
     needs: [nft-test, setup]
-    uses: ./.github/workflows/execute-command.yaml
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ input.downstream-version }}
     with:
       command: p2p-dev
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
