--- a/.github/workflows/idp-p2p.yaml
+++ b/.github/workflows/idp-p2p.yaml
@@ -50,7 +50,7 @@ jobs:
 
   functional-test:
     needs: [build, setup]
-    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ input.downstream-version }}
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ inputs.downstream-version }}
     with:
       command: p2p-functional
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
@@ -61,7 +61,7 @@ jobs:
   nft-test:
     name: nft-test
     needs: [functional-test, setup]
-    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ input.downstream-version }}
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ inputs.downstream-version }}
     with:
       command: p2p-nft
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
@@ -73,7 +73,7 @@ jobs:
     name: dev-deploy
     if: github.ref == 'refs/heads/main'
     needs: [nft-test, setup]
-    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ input.downstream-version }}
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@${{ inputs.downstream-version }}
     with:
       command: p2p-dev
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
