--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,5 +21,5 @@ jobs:
       project-number: PROJECT-NUMBER
       tenant-name: TEST-TENANT
       dry-run: true
-      downstream-version: ${{ github.ref_name }}
+      downstream-version: main
 
