--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,33 @@ jobs:
       git-token: ${{ secrets.GITHUB_TOKEN }}
     with: 
       dry-run: true
+
+  test_execute_command:
+    needs: [build, setup]
+    uses: c./.github/workflows/execute-command.yaml
+    secrets:
+      env_vars: |
+        TEST_VARIABLE=value
+    with:
+      command: p2p-build
+      workload-identity-provider: WORKLOAD_IP
+      service-account: SERVICE_ACCOUNT
+      project-id: TEST-TENANT
+      dry-run: true
       
+  test_execute_command_without_env_vars:
+    needs: [build, setup]
+    uses: c./.github/workflows/execute-command.yaml
+    secrets:
+      env_vars: |
+        TEST_VARIABLE=value
+    with:
+      command: p2p-build
+      workload-identity-provider: WORKLOAD_IP
+      service-account: SERVICE_ACCOUNT
+      project-id: TEST-TENANT
+      dry-run: true
+
   p2p:
     uses: ./.github/workflows/idp-p2p.yaml
     with:
