Add test print and typo fixes

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
       env_vars: |
         TEST_VARIABLE=value
     with:
-      command: p2p-build
+      command: test-var-print
       workload-identity-provider: WORKLOAD_IP
       service-account: SERVICE_ACCOUNT
       project-id: TEST-TENANT
@@ -28,9 +28,6 @@ jobs:
 
   test_execute_command_without_env_vars:
     uses: ./.github/workflows/execute-command.yaml
-    secrets:
-      env_vars: |
-        TEST_VARIABLE=value
     with:
       command: p2p-build
       workload-identity-provider: WORKLOAD_IP
