--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -3,7 +3,8 @@ name: p2p-command
 on:
   workflow_call:
     secrets:
-      env_vars: false
+      env_vars:
+        required: false
     inputs:
       command:
         required: true 
