--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -42,6 +42,9 @@ jobs:
       contents: read
       id-token: write
 
+    env:
+      env_vars: ${{ secrets.env_vars }}
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v3
