--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -44,7 +44,7 @@ jobs:
 
     env:
       env_vars: ${{ secrets.env_vars }}
-      
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -106,7 +106,7 @@ jobs:
       - name: Decode environment variables
         run: |
           for i in $env_vars; do
-            i=$(echo $i | sed 's/=.*//g')=$(echo ${i#*=} | base64 -di | base64 -di)
+            i=$(echo $i | sed 's/=.*//g')=$(echo ${i#*=})
             echo ::add-mask::${i#*=}
             printf '%s\n' $i >> $GITHUB_ENV
           done
