--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -2,6 +2,9 @@ name: p2p-command
 
 on:
   workflow_call:
+    secrets:
+      env_vars:
+        required: false
     inputs:
       command:
         required: true 
@@ -38,6 +41,9 @@ jobs:
     permissions:
       contents: read
       id-token: write
+
+    env:
+      env_vars: ${{ secrets.env_vars }}
 
     steps:
       - name: Checkout
@@ -96,6 +102,14 @@ jobs:
           registry: europe-west2-docker.pkg.dev
           username: oauth2accesstoken
           password: ${{ steps.auth.outputs.access_token }}
+
+      - name: Decode environment variables
+        run: |
+          for i in $env_vars; do
+            i=$(echo $i | sed 's/=.*//g')=$(echo ${i#*=})
+            echo ::add-mask::${i#*=}
+            printf '%s\n' $i >> $GITHUB_ENV
+          done
 
       - name: Run Command
         id: run-command
