Passing env vars on idp-p2p and update exec command version

--- a/.github/workflows/idp-p2p.yaml
+++ b/.github/workflows/idp-p2p.yaml
@@ -2,6 +2,9 @@ name: IDP P2P
 
 on:
   workflow_call:
+    secrets:
+      env_vars:
+        required: false
     inputs:
       project-id:
         required: true
@@ -37,7 +40,9 @@ jobs:
           echo "service_account=$SERVICE_ACCOUNT" >> $GITHUB_OUTPUT
   build:
     needs: [setup]
-    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@v0.4.0
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@v0.7.0
+    secrets:
+      env_vars: ${{ secrets.env_vars }}
     with:
       command: p2p-build
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
@@ -47,7 +52,9 @@ jobs:
 
   functional-test:
     needs: [build, setup]
-    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@v0.4.0
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@v0.7.0
+    secrets:
+      env_vars: ${{ secrets.env_vars }}
     with:
       command: p2p-functional
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
@@ -58,7 +65,9 @@ jobs:
   nft-test:
     name: nft-test
     needs: [functional-test, setup]
-    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@v0.4.0
+    secrets:
+      env_vars: ${{ secrets.env_vars }}
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@v0.7.0
     with:
       command: p2p-nft
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
@@ -70,7 +79,9 @@ jobs:
     name: dev-deploy
     if: github.ref == 'refs/heads/main'
     needs: [nft-test, setup]
-    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@v0.4.0
+    secrets:
+      env_vars: ${{ secrets.env_vars }}
+    uses: coreeng/reusable-p2p/.github/workflows/execute-command.yaml@v0.7.0
     with:
       command: p2p-dev
       workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
