--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,9 @@ jobs:
 
   p2p:
     uses: ./.github/workflows/idp-p2p.yaml
+    secrets:
+      env_vars: |
+        TEST_VARIABLE=value
     with:
       project-id: PROJECT-ID
       project-number: PROJECT-NUMBER
