--- a/.github/workflows/execute-command.yaml
+++ b/.github/workflows/execute-command.yaml
@@ -12,6 +12,9 @@ on:
       project-id:
         required: true
         type: string
+      env-name:
+        required: true
+        type: string  
       workload-identity-provider:
         required: true
         type: string
@@ -78,7 +81,7 @@ jobs:
         if: inputs.dry-run == false
         shell: bash
         run: |
-          nohup sh -c "while true ; do gcloud compute start-iap-tunnel sandbox-gcp-bastion 3128 --local-host-port localhost:57755 --project ${{ inputs.project-id }}  --zone ${{ inputs.zone }}  ; done" &
+          nohup sh -c "while true ; do gcloud compute start-iap-tunnel ${{ inputs.env-name }}-bastion 3128 --local-host-port localhost:57755 --project ${{ inputs.project-id }}  --zone ${{ inputs.zone }}  ; done" &
           sleep 4
 
       - name: Setup kubeconfig
@@ -86,8 +89,8 @@ jobs:
         if: inputs.dry-run == false
         shell: bash
         run: |
-          gcloud container clusters get-credentials --project ${{ inputs.project-id }} --zone ${{ inputs.region }} --internal-ip sandbox-gcp
-          kubectl config set clusters.gke_${{ inputs.project-id }}_${{ inputs.region }}_sandbox-gcp.proxy-url http://localhost:57755
+          gcloud container clusters get-credentials --project ${{ inputs.project-id }} --zone ${{ inputs.region }} --internal-ip ${{ inputs.env-name }}
+          kubectl config set clusters.gke_${{ inputs.project-id }}_${{ inputs.region }}_${{ inputs.env-name }}.proxy-url http://localhost:57755
     
       - name: Test kubectl
         id: test-kubectl
