execute-command: add pre-targets and post-targets parameters
Allows you to execute arbitrary Make targets either side of the desired p2p command.

Required by the intergo usecase for additional registry logins before a command is run.

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -5,14 +5,13 @@ on:
     branches:
       - main
 
-
 concurrency: cd-main
 
-  
 jobs:
   p2p:
     uses: ./.github/workflows/p2p.yaml
     with:
+      env-name: test-env
       project-id: PROJECT-ID
       project-number: PROJECT-NUMBER
       tenant-name: TEST-TENANT
