--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,10 +7,10 @@ on:
 
 jobs:
   increment-version:
-    uses: ./.github/workflows/increment-version.yaml   
+    uses: ./.github/workflows/increment-version.yaml
     secrets:
       git-token: ${{ secrets.GITHUB_TOKEN }}
-    with: 
+    with:
       dry-run: true
 
   test_execute_command:
@@ -19,6 +19,7 @@ jobs:
       env_vars: |
         TEST_VARIABLE=value
     with:
+      env-name: test-env
       command: test-var-print
       workload-identity-provider: WORKLOAD_IP
       service-account: SERVICE_ACCOUNT
@@ -28,11 +29,27 @@ jobs:
   test_execute_command_without_env_vars:
     uses: ./.github/workflows/execute-command.yaml
     with:
+      env-name: test-env
       command: p2p-build
       workload-identity-provider: WORKLOAD_IP
       service-account: SERVICE_ACCOUNT
       project-id: TEST-TENANT
       dry-run: true
+
+  test_execute_command_with_pre_post_steps:
+    uses: ./.github/workflows/execute-command.yaml
+    secrets:
+      env_vars: |
+        SOME_SECRET=123
+    with:
+      env-name: test-env
+      command: p2p-build
+      workload-identity-provider: WORKLOAD_IP
+      service-account: SERVICE_ACCOUNT
+      project-id: TEST-TENANT
+      dry-run: true
+      pre-targets: test-pre-step
+      post-targets: test-post-step
 
   p2p:
     uses: ./.github/workflows/p2p.yaml
@@ -40,8 +57,8 @@ jobs:
       env_vars: |
         TEST_VARIABLE=value
     with:
+      env-name: test-env
       project-id: PROJECT-ID
       project-number: PROJECT-NUMBER
       tenant-name: TEST-TENANT
       dry-run: true
-
