p2p: add pre and post-target params to p2p workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,3 +62,5 @@ jobs:
       project-number: PROJECT-NUMBER
       tenant-name: TEST-TENANT
       dry-run: true
+      pre-targets: test-pre-step
+      post-targets: test-post-step
