--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -16,3 +16,5 @@ jobs:
       project-number: PROJECT-NUMBER
       tenant-name: TEST-TENANT
       dry-run: true
+      pre-targets: test-pre-step
+      post-targets: test-post-step
